updated create EC2 instances.yaml

--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -11,7 +11,7 @@
         wait: yes
         group: Demo_security_group
         count: 1
-        vpc_subnet_id: default
+        vpc_subnet_id: subnet-0582e4bc11a2ab0d4
         assign_public_ip: yes
         region: us-east-1
         instance_tags:
