--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -7,7 +7,8 @@
       amazon.aws.ec2_instance:
         key_name: demo_key
         instance_type: t2.micro
-        image: ami-0e58f89e91723af4c
+        image:
+          id: ami-0e58f89e91723af4c
         wait: yes
         group: Demo_security_group
         count: 1
