updated create EC2 instances.yaml

--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -1,35 +1,24 @@
+---
 - hosts: localhost
-  gather_facts: False
-  vars:
-    ami_id: "ami-0e58f89e91723af4c"
-    instance_type: "t2.micro"
-    key_name: "demo_key"
-    subnet_id: "subnet-0582e4bc11a2ab0d4"
-    security_group_id: "Demo_security_group"
-    instance_name: "Demo_instance"
+  gather_facts: false
+
   tasks:
-  - name: Launch EC2 instance
-    ec2_instance:
-      instance_type: "{{ instance_type }}"
-      image_id: "{{ ami_id }}"
-      key_name: "{{ key_name }}"
-      subnet_id: "{{ subnet_id }}"
-      vpc_subnet_id: "{{ subnet_id }}"
-      security_groups: ["{{ security_group_id }}"]
-      instance_tags:
-        Name: "{{ instance_name }}"
-      wait: true
-      wait_timeout: 600
-      state: present
-      termination_protection: true
-      validate_certs: false
-    register: ec2
-  - name: Add new instance to host group
-    add_host:
-      hostname: "{{ ec2.instance.public_ip }}"
-      ansible_host: "{{ ec2.instance.public_ip }}"
-      ansible_user: ec2-user
-      ansible_ssh_private_key_file: /path/to/your/key.pem
-      groupname: webservers
+    - name: Launch EC2 instance
+      ec2_instance:
+        image_id: ami-0e58f89e91723af4c
+        instance_type: t2.micro
+        key_name: demo_key
+        security_groups:
+          - Demo_security_group
+        subnet_id: subnet-0582e4bc11a2ab0d4
+        instance_tags:
+          Name: Demo_instance
+        wait: true
+        region: us-east-1
+      register: ec2
 
-
+    - name: Add new instance to host group
+      add_host:
+        name: "{{ item.public_ip }}"
+        groups: launched
+      with_items: "{{ ec2.instances }}"
