--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -1,24 +1,31 @@
 ---
-- hosts: localhost
+- name: Launch EC2 instance
+  hosts: localhost
   gather_facts: false
-
+  vars:
+    region: "us-east-1"
+    instance_type: "t2.micro"
+    image_id: "ami-0e58f89e91723af4c"
+    subnet_id: "subnet-0582e4bc11a2ab0d4"
+    security_group: "Demo_security_group"
+    key_name: "demo_key"
+    instance_tags:
+      Name: "Demo_instance"
   tasks:
     - name: Launch EC2 instance
-      ec2_instance:
-        image_id: ami-0e58f89e91723af4c
-        instance_type: t2.micro
-        key_name: demo_key
-        security_groups:
-          - Demo_security_group
-        subnet_id: subnet-0582e4bc11a2ab0d4
-        instance_tags:
-          Name: Demo_instance
+      amazon.aws.ec2_instance:
+        region: "{{ region }}"
+        instance_type: "{{ instance_type }}"
+        image_id: "{{ image_id }}"
+        subnet_id: "{{ subnet_id }}"
+        security_groups: "{{ security_group }}"
+        key_name: "{{ key_name }}"
+        instance_tags: "{{ instance_tags }}"
         wait: true
-        region: us-east-1
+        count: 1
+        state: present
       register: ec2
+    - name: Show instance details
+      debug:
+        var: ec2.instance_ids[0]
 
-    - name: Add new instance to host group
-      add_host:
-        name: "{{ item.public_ip }}"
-        groups: launched
-      with_items: "{{ ec2.instances }}"
