--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -1,51 +1,65 @@
 ---
 - name: Create EC2 instances
   hosts: localhost
+  connection: local
   gather_facts: no
+
   vars:
-    region: "{{ aws_region }}"
-    image_id: "{{ ami_id }}"
-    instance_type: "{{ instance_type }}"
-    key_name: "{{ key_name }}"
-    count: "{{ count }}"
-    subnet_id: "{{ subnet_id }}"
-    security_group_name: "{{ security_group_name }}"
-    security_group_desc: "{{ security_group_desc }}"
-    vpc_id: "{{ vpc_id }}"
-    tag_name: "{{ tag_name }}"
+    instance_type: t2.micro
+    ami_id: ami-0c55b159cbfafe1f0
+    key_name: demo-keypair
+    security_group_name: Demo_security_group
+    vpc_subnet_id: subnet-0f4f8f0d4bbfae5b0
+
   tasks:
   - name: Create a security group
     community.aws.ec2_group:
       name: "{{ security_group_name }}"
-      description: "{{ security_group_desc }}"
-      region: "{{ region }}"
-      vpc_id: "{{ vpc_id }}"
+      description: "Demo security group"
+      region: "us-west-2"
       rules:
         - proto: tcp
           from_port: 22
           to_port: 22
           cidr_ip: 0.0.0.0/0
-        - proto: tcp
-          from_port: 80
-          to_port: 80
-          cidr_ip: 0.0.0.0/0
+
+  - name: Create a key pair
+    community.aws.ec2_key:
+      name: "{{ key_name }}"
+      region: "us-west-2"
+      state: present
 
   - name: Launch EC2 instance
     community.aws.ec2_instance:
-      instance_tags:
-        Name: "{{ tag_name }}"
-      region: "{{ region }}"
-      key_name: "{{ key_name }}"
       instance_type: "{{ instance_type }}"
-      image_id: "{{ image_id }}"
-      count: "{{ count }}"
-      subnet_id: "{{ subnet_id }}"
-      assign_public_ip: true
-      vpc_security_group_ids: "{{ lookup('aws_ec2', 'security_groups', filters={'group-name': security_group_name, 'vpc-id': vpc_id}) }}"
+      image_id: "{{ ami_id }}"
+      key_name: "{{ key_name }}"
+      group_id: "{{ security_group_name }}"
+      vpc_subnet_id: "{{ vpc_subnet_id }}"
+      region: "us-west-2"
+      count: 1
+      instance_tags:
+        Name: "Demo instance"
+      wait: yes
     register: ec2
-  - name: Show instance information
+
+  - name: Add new instance to host group
+    add_host:
+      name: "{{ item.public_ip }}"
+      groups: launched
+    with_items: "{{ ec2.instances }}"
+
+  - name: Wait for SSH to come up
+    become: yes
+    wait_for_connection:
+      delay: 30
+      timeout: 320
+      sleep: 5
+
+  - name: Print inventory
     debug:
-      var: ec2.instances
+      var: groups['launched']
+
 
 
 
