--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -1,66 +1,45 @@
 ---
 - name: Create EC2 instances
   hosts: localhost
-  connection: local
-  gather_facts: no
-
+  gather_facts: false
   vars:
-    instance_type: t2.micro
-    ami_id: ami-0c55b159cbfafe1f0
-    key_name: demo-keypair
-    security_group_name: Demo_security_group
-    vpc_subnet_id: subnet-0f4f8f0d4bbfae5b0
-
+    region: "us-east-1"
+    image_id: "ami-0c94855ba95c71c99"
+    instance_type: "t2.micro"
+    security_group_name: "Demo_security_group"
+    key_name: "my_keypair"
   tasks:
   - name: Create a security group
     community.aws.ec2_group:
       name: "{{ security_group_name }}"
-      description: "Demo security group"
-      region: "us-west-2"
+      description: "Allow SSH and HTTP access"
+      vpc_id: "vpc-0aa6f2c6d5db6d109"
       rules:
         - proto: tcp
-          from_port: 22
-          to_port: 22
+          ports:
+            - 22
           cidr_ip: 0.0.0.0/0
-
+        - proto: tcp
+          ports:
+            - 80
+          cidr_ip: 0.0.0.0/0
   - name: Create a key pair
     community.aws.ec2_key:
       name: "{{ key_name }}"
-      region: "us-west-2"
-      state: present
-
+      region: "{{ region }}"
+    register: key_pair
   - name: Launch EC2 instance
     community.aws.ec2_instance:
+      name: "webserver"
+      image_id: "{{ image_id }}"
       instance_type: "{{ instance_type }}"
-      image_id: "{{ ami_id }}"
       key_name: "{{ key_name }}"
-      group_id: "{{ security_group_name }}"
-      vpc_subnet_id: "{{ vpc_subnet_id }}"
-      region: "us-west-2"
-      count: 1
-      instance_tags:
-        Name: "Demo instance"
-      wait: yes
-    register: ec2
-
-  - name: Add new instance to host group
-    add_host:
-      name: "{{ item.public_ip }}"
-      groups: launched
-    with_items: "{{ ec2.instances }}"
-
-  - name: Wait for SSH to come up
-    become: yes
-    wait_for_connection:
-      delay: 30
-      timeout: 320
-      sleep: 5
-
-  - name: Print inventory
+      security_group: "{{ security_group_name }}"
+      wait: true
+      region: "{{ region }}"
+    register: ec2_instance
+  - name: Print Public IP of instance
     debug:
-      var: groups['launched']
-
-
-
+      var: ec2_instance.public_ip_address
 
 
