--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -27,13 +27,13 @@
     register: security_group
 
   - name: Create a key pair
-    community.aws.ec2_key:
+    amazon.aws.ec2_key:
       name: "{{ keypair }}"
       region: "{{ region }}"
     register: keypair
 
   - name: Launch an EC2 Instance
-    community.aws.ec2:
+    amazon.aws.ec2_instance:
       key_name: "{{ keypair.key.name }}"
       instance_type: "{{ instance_type }}"
       image_id: "{{ ami }}"
