--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -11,6 +11,7 @@
     keypair: my-keypair
     sg_name: my-security-group
     sg_description: My security group
+    vpc_subnet_id: subnet-0582e4bc11a2ab0d4
     rules:
       - proto: tcp
         from_port: 22
@@ -32,17 +33,15 @@
       region: "{{ region }}"
     register: keypair
 
-  - name: Launch an EC2 Instance
+  - name: start an instance with a public IP address
     amazon.aws.ec2_instance:
       key_name: "{{ keypair.key.name }}"
+      vpc_subnet_id: "{{ vpc_subnet_id }}"
       instance_type: "{{ instance_type }}"
+      security_group: "{{ security_group }}"
+      network:
+        assign_public_ip: true
       image_id: "{{ ami }}"
-      region: "{{ region }}"
-      group_id: "{{ security_group.group_id }}"
-      count: 1
-      wait: true
-      instance_tags:
-        Name: my-instance
-
-
+      tags:
+        Environment: Testing
 
