--- a/create EC2 instances.yaml
+++ b/create EC2 instances.yaml
@@ -38,10 +38,13 @@
       key_name: "{{ keypair.key.name }}"
       vpc_subnet_id: "{{ vpc_subnet_id }}"
       instance_type: "{{ instance_type }}"
-      security_group: "{{ security_group }}"
+      security_group: "{{ security_group.group_id }}"
       network:
         assign_public_ip: true
       image_id: "{{ ami }}"
       tags:
         Environment: Testing
+
+  - debug:
+      var: ec2_instance
 
