--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -1,5 +1,5 @@
 --- 
-- name: Setup Vprofile Bastion Host 
+- name: Setup Devpro Bastion Host
   hosts: localhost
   connection: local 
   gather_facts: no 
@@ -10,11 +10,11 @@
     - name: Import VPC setup Variable 
       include_vars: vars/output_vars
 
-    - name: Create vprofile ec2 key 
-      ec2_key:
-        name: vprofile-key
+    - name: Create Devpro ec2 key
+      amazon.aws.ec2_key:
+        name: devpro-key
         region: "{{region}}"
-      register: key_out
+      register: key_output
 
     - name: Save private key into file bastion-key.pem
       copy:
@@ -23,30 +23,32 @@
         mode: 0600
       when: key_out.changed
 
-    - name: Create Sec Grp for bastion host 
-      ec2_group: 
+    - name: Create Sec Grp for bastion host
+      amazon.aws.ec2_security_group:
         name: Bastion-host-sg
         description: Allow port 22 from everywhere and all port within sg
-        region: "{{region}}"
         vpc_id: "{{vpcid}}"
+        profile: "{{ aws_profile }}"
+        region: "{{region}}"
         rules:
-          - proto: tcp 
-            from_port: 22
-            to_port: 22
+          - proto: tcp
+            ports:
+              - 22
             cidr_ip: "{{MYIP}}"
+            rule_desc: allow all on port 80
       register: BastionSG_out
 
-    - name: Creating Bastion Host 
-      ec2:
-        key_name: vprofile-key
+    - name: Creating Bastion Host
+      amazon.aws.ec2_instance:
+        key_name: devpro-key
         region: "{{region}}"
         instance_type: t2.micro
         image: "{{bastion_ami}}"
         wait: yes
         wait_timeout: 300
-        instance_tags:
+        tags:
           Name: "Bastion_host"
-          Project: Vprofile
+          Project: Devpro
           Owner: DevOps Team 
         exact_count: 1
         count_tag:
@@ -56,4 +58,5 @@
         group_id: "{{BastionSG_out.group_id}}"
         vpc_subnet_id: "{{pubsub1id}}"
       register: bastionHost_out 
-      
+
+
