--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -41,7 +41,8 @@
         key_name: devpro-key
         region: "{{region}}"
         instance_type: t2.micro
-        image: "{{bastion_ami}}"
+        image:
+          ami_id: "{{bastion_ami}}"
         wait: yes
         wait_timeout: 300
         tags:
