updated bastion-instance.yml files

--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -50,11 +50,11 @@
           Project: Devpro
           Owner: DevOps Team 
         exact_count: 1
-        count_tag:
+        count:
           Name: "Bastion_host"
-          Project: Vprofile
+          Project: Devpro
           Owner: DevOps Team 
-        group_id: "{{BastionSG_out.group_id}}"
+        security_group: "{{BastionSG_out.group_id}}"
         vpc_subnet_id: "{{pubsub1id}}"
       register: bastionHost_out 
 
