--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -51,6 +51,13 @@
         exact_count: 1
         security_group: "{{BastionSG_out.group_id}}"
         vpc_subnet_id: "{{pubsub1id}}"
-      register: bastionHost_out 
+      register: bastionHost_out
+
+    - name: Insert/Update "BastionSGid" in vars/output_vars
+      ansible.builtin.blockinfile:
+        path: vars/output_vars
+        backup: yes
+        block: |
+          BastionSGid: {{BastionSG_out.group.id}}
 
 
