--- a/devpro-ec2-stack.yaml
+++ b/devpro-ec2-stack.yaml
@@ -7,6 +7,9 @@
   - name: Import Output_vars variable
     include_vars: vars/output_vars
 
+  - name: Import Output_vars variable
+    include_vars: vars/vpc_setup
+
   - name: Import devprostacck variable
     include_vars: vars/devprostack
 
