--- a/devpro-ec2-stack.yaml
+++ b/devpro-ec2-stack.yaml
@@ -44,7 +44,7 @@
 
   - name: Create Devpro Stack security group
     amazon.aws.ec2_security_group:
-      name: dproStack-sg
+      name: dproStack_sg
       description: Allow port 22 from everywhere and all ports within sg
       region: "{{ region }}"
       vpc_id: "{{ vpcid }}"
@@ -54,7 +54,7 @@
           from_port: 80
           to_port: 80
           cidr_ip: 0.0.0.0/0
-          group_id: "{{ dproStack-sg_out.group_id }}"
+          group_id: "{{ dproStack_sg_out.group_id }}"
         - proto: tcp
           from_port: 22
           to_port: 22
@@ -85,7 +85,7 @@
         Project: Devpro
         Owner: DevOps Team
       exact_count: 1
-      security_group: "{{dproStack-sg_out.group_id}}"
+      security_group: "{{dproStack_sg_out.group_id}}"
       vpc_subnet_id: "{{privsub1id}}"
     register: bastionHost_out
 
@@ -102,7 +102,7 @@
         Project: Devpro
         Owner: DevOps Team
       exact_count: 1
-      security_group: "{{dproStack-sg_out.group_id}}"
+      security_group: "{{dproStack_sg_out.group_id}}"
       vpc_subnet_id: "{{privsub1id}}"
     register: web01_out
 
@@ -119,7 +119,7 @@
         Project: Devpro
         Owner: DevOps Team
       exact_count: 1
-      security_group: "{{dproStack-sg_out.group_id}}"
+      security_group: "{{dproStack_sg_out.group_id}}"
       vpc_subnet_id: "{{privsub1id}}"
     register: mc01_out
 
@@ -136,7 +136,7 @@
         Project: Devpro
         Owner: DevOps Team
       exact_count: 1
-      security_group: "{{dproStack-sg_out.group_id}}"
+      security_group: "{{dproStack_sg_out.group_id}}"
       vpc_subnet_id: "{{privsub1id}}"
     register: rmq01_out
 
@@ -153,7 +153,7 @@
         Project: Devpro
         Owner: DevOps Team
       exact_count: 1
-      security_group: "{{dproStack-sg_out.group_id}}"
+      security_group: "{{dproStack_sg_out.group_id}}"
       vpc_subnet_id: "{{privsub1id}}"
     register: db01_out
 
