--- a/devpro-ec2-stack.yaml
+++ b/devpro-ec2-stack.yaml
@@ -166,7 +166,7 @@
       region: "{{region}}"
       state: present
       instance_ids:
-          - "{{ web01_out.instance[0].instance_id }}"
+          - "{{ web01_out.instances[0].instance_id }}"
       purge_instance_ids: true
       security_group_ids: "{{ dproELB_sg_out.group_id }}"
       subnets:
@@ -182,11 +182,11 @@
     ansible.builtin.blockinfile:
       path: provision-stack/group_vars/hostsip
       block: |
-        web01_ip: {{ web01_out.instance[0].instance_id.private_ip_address }}
-        app01_ip: {{ app01_out.instance[0].instance_id.private_ip_address }}
-        rmq01_ip: {{ rmq01_out.instance[0].instance_id.private_ip_address }}
-        mc01_ip: {{ mc01_out.instance[0].instance_id.private_ip_address }}
-        db01_ip: {{ db01_out.instance[0].instance_id.private_ip_address }}
+        web01_ip: {{ web01_out.instances[0].instance_id.private_ip_address }}
+        app01_ip: {{ app01_out.instances[0].instance_id.private_ip_address }}
+        rmq01_ip: {{ rmq01_out.instances[0].instance_id.private_ip_address }}
+        mc01_ip: {{ mc01_out.instances[0].instance_id.private_ip_address }}
+        db01_ip: {{ db01_out.instances[0].instance_id.private_ip_address }}
         cntl ansible_host=127.0.0.1 ansible_connection=local
 
   - name: Copy login key to provision_stack directory
@@ -199,11 +199,11 @@
     blockinfile:
       path: provision-stack/inventory-vpro
       block: |
-        web01 ansible_host={{ web01_out.instance[0].instance_id.private_ip_address }}
-        app01 ansible_host={{ app01_out.instance[0].instance_id.private_ip_address }}
-        rmq01 ansible_host={{ rmq01_out.instance[0].instance_id.private_ip_address }}
-        mc01 ansible_host={{ mc01_out.instance[0].instance_id.private_ip_address }}
-        db01 ansible_host={{ db01_out.instance[0].instance_id.private_ip_address }}
+        web01 ansible_host={{ web01_out.instances[0].instance_id.private_ip_address }}
+        app01 ansible_host={{ app01_out.instances[0].instance_id.private_ip_address }}
+        rmq01 ansible_host={{ rmq01_out.instances[0].instance_id.private_ip_address }}
+        mc01 ansible_host={{ mc01_out.instances[0].instance_id.private_ip_address }}
+        db01 ansible_host={{ db01_out.instances[0].instance_id.private_ip_address }}
         cntl ansible_host=127.0.0.1 ansible_connection=local
         [websrvgrp]
         web01
