--- a/devpro-ec2-stack.yaml
+++ b/devpro-ec2-stack.yaml
@@ -182,11 +182,11 @@
     ansible.builtin.blockinfile:
       path: provision-stack/group_vars/hostsip
       block: |
-        web01_ip: {{ web01_out.instances[0].instance_id.private_ip_address }}
-        app01_ip: {{ app01_out.instances[0].instance_id.private_ip_address }}
-        rmq01_ip: {{ rmq01_out.instances[0].instance_id.private_ip_address }}
-        mc01_ip: {{ mc01_out.instances[0].instance_id.private_ip_address }}
-        db01_ip: {{ db01_out.instances[0].instance_id.private_ip_address }}
+        web01_ip: {{ web01_out.instances[0].private_ip_address }}
+        app01_ip: {{ app01_out.instances[0].private_ip_address }}
+        rmq01_ip: {{ rmq01_out.instances[0].private_ip_address }}
+        mc01_ip: {{ mc01_out.instances[0].private_ip_address }}
+        db01_ip: {{ db01_out.instances[0].private_ip_address }}
         cntl ansible_host=127.0.0.1 ansible_connection=local
 
   - name: Copy login key to provision_stack directory
