--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -37,6 +37,20 @@
             rule_desc: allow all on port 80
       register: BastionSG_out
 
+    - name: Create security group with specific IP address allowed
+      amazon.aws.ec2_security_group:
+        name: ansible_controller_sg
+        description: Ansible controller security group
+        region: "{{ region }}"
+        vpc_id: "{{ vpcid }}"
+        rules:
+          - proto: tcp
+            ports:
+              - 22
+            cidr_ip: 192.168.0.133/32
+            rule_desc: Allow SSH from 192.168.0.133
+      register: ansible_controller_sg_out
+
     - name: Creating Bastion Host
       amazon.aws.ec2_instance:
         key_name: devpro-key
