--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -79,6 +79,6 @@
         path: vars/output_vars
         backup: yes
         block: |
-          BastionSGid: {{BastionSG_out.group_id}}
+          BastionSGid: "{{BastionSG_out.results[0].group_id}}"
 
 
