--- a/provision-stack/group_vars/inventory.ini
+++ b/provision-stack/group_vars/inventory.ini
@@ -1,9 +1,9 @@
 [private_instances]
-web01 ansible_host=172.20.4.207
-app01 ansible_host=172.20.4.197
-rmq01 ansible_host=172.20.4.135
-mc01 ansible_host=172.20.4.129
-db01 ansible_host=172.20.4.92
+web01_ip: 172.20.4.153
+app01_ip: 172.20.4.187
+rmq01_ip: 172.20.4.177
+mc01_ip: 172.20.4.84
+db01_ip: 172.20.4.101
 
 [bastion]
 bastion_host ansible_host=18.222.102.42
