fixed indentation on bastion-instance.yml

--- a/provision-stack/group_vars/inventory.ini
+++ b/provision-stack/group_vars/inventory.ini
@@ -1,9 +1,14 @@
 [private_instances]
-web01_ip: 172.20.4.153
-app01_ip: 172.20.4.187
-rmq01_ip: 172.20.4.177
-mc01_ip: 172.20.4.84
-db01_ip: 172.20.4.101
+web01 ansible_host=172.20.4.207 ansible_user=ubuntu
+ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
+app01 ansible_host=172.20.4.197 ansible_user=ubuntu
+ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
+rmq01 ansible_host=172.20.4.135 ansible_user=ubuntu
+ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
+mc01 ansible_host=172.20.4.129 ansible_user=ubuntu
+ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
+db01 ansible_host=172.20.4.92 ansible_user=ubuntu
+ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
 
 [bastion]
 bastion_host ansible_host=18.222.102.42
