--- a/provision-stack/group_vars/inventory.ini
+++ b/provision-stack/group_vars/inventory.ini
@@ -6,4 +6,4 @@ mc01 ansible_host=172.20.4.84 ansible_user=ubuntu ansible_ssh_private_key_file=/
 db01 ansible_host=172.20.4.101 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
 
 [bastion]
-bastion_host ansible_host=18.116.81.249 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/bastion-key.pem
+bastion_host ansible_host=18.116.81.249 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/bastion-key.pem
