--- a/provision-stack/group_vars/inventory.ini
+++ b/provision-stack/group_vars/inventory.ini
@@ -1,9 +1,9 @@
 [private_instances]
-web01 ansible_host=172.20.4.153 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
-app01 ansible_host=172.20.4.187 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
-rmq01 ansible_host=172.20.4.177 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
-mc01 ansible_host=172.20.4.84 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
-db01 ansible_host=172.20.4.101 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/loginkey_dpro.pem
+web01 ansible_host=172.20.4.153 ansible_user=ubuntu
+app01 ansible_host=172.20.4.187 ansible_user=ubuntu
+rmq01 ansible_host=172.20.4.177 ansible_user=ubuntu
+mc01 ansible_host=172.20.4.84 ansible_user=ubuntu
+db01 ansible_host=172.20.4.101 ansible_user=ubuntu
 
 [bastion]
-bastion_host ansible_host=18.116.81.249 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ansiblecontroller/Complete_Stack_setup_AWS/bastion-key.pem
+bastion_host ansible_host=18.116.81.249 ansible_user=ubuntu
