--- a/provision-stack/group_vars/inventory.ini
+++ b/provision-stack/group_vars/inventory.ini
@@ -6,4 +6,7 @@ mc01 ansible_host=172.20.4.84 ansible_user=ubuntu
 db01 ansible_host=172.20.4.101 ansible_user=ubuntu
 
 [bastion]
-bastion_host ansible_host=ec2-18-116-81-249.us-east-2.compute.amazonaws.com ansible_user=ubuntu
+bastion_host ansible_host=18.116.81.249 ansible_user=ec2-user
+
+[private_instances:vars]
+ansible_ssh_common_args='-o ProxyJump=ec2-user@18.116.81.249'
