--- a/devpro-ec2-stack.yaml
+++ b/devpro-ec2-stack.yaml
@@ -13,6 +13,9 @@
   - name: Import devprostacck variable
     include_vars: vars/devprostack
 
+  - name: import inventory_dpro
+    include_vars: provision-stack/group_vars/inventory_dpro
+
   - name: Create a key pair
     amazon.aws.ec2_key:
       name: dprokey
