--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -7,8 +7,8 @@
     - name: Import VPC setup variable 
       include_vars: vars/vpc_setup
 
-    - name: Import VPC setup Variable
-      include_vars: vars/output_vars
+    - name: import inventory_dpro
+      include_vars: provision-stack/group_vars/inventory_dpro
 
     - name: Create Devpro ec2 key
       amazon.aws.ec2_key:
