--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -8,7 +8,7 @@
       include_vars: vars/vpc_setup
 
     - name: import inventory_dpro.ini
-      include_vars: provision-stack/group_vars/inventory_dpro.ini
+      include_vars: vars/inventory_dpro.ini
 
     - name: Create Devpro ec2 key
       amazon.aws.ec2_key:
